Implement import queue reliability compensation
